@@ -20,6 +20,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|math
+operator|.
+name|BigInteger
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|Collections
@@ -371,15 +381,29 @@ operator|<<
 name|shift
 operator|)
 decl_stmt|;
+assert|assert
+name|shift
+operator|<
+literal|64
+assert|;
 specifier|final
 name|long
 name|upperMax
-init|=
+decl_stmt|;
+if|if
+condition|(
+name|shift
+operator|<
+literal|63
+condition|)
+block|{
+name|upperMax
+operator|=
 name|term
 operator||
 operator|(
 operator|(
-literal|0x1L
+literal|1L
 operator|<<
 operator|(
 name|shift
@@ -390,7 +414,15 @@ operator|)
 operator|-
 literal|1
 operator|)
-decl_stmt|;
+expr_stmt|;
+block|}
+else|else
+block|{
+name|upperMax
+operator|=
+literal|0xffffffffffffffffL
+expr_stmt|;
+block|}
 specifier|final
 name|long
 name|lowerMax
@@ -489,7 +521,13 @@ call|(
 name|short
 call|)
 argument_list|(
-literal|62
+operator|(
+name|GeoUtils
+operator|.
+name|BITS
+operator|<<
+literal|1
+operator|)
 operator|-
 name|res
 operator|>>>
